--- a/Blockchain-module/client/public/index.html
+++ b/Blockchain-module/client/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <base href="%PUBLIC_URL%">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -21,6 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://kit.fontawesome.com/d7326ea7a1.js" crossorigin="anonymous"></script>
     <title>React App</title>
   </head>
   <body>
